# ToyC

./: .clang-format  .gitignore  CMakeLists.txt  README.en.md  README.md  main  main.cpp  run_test.sh
.VSCodeCounter/2022-07-17_14-26-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: asm_code.cpp.F65841E4003EDE83.idx  asm_code.h.CA753F2DF3929B08.idx  ast.cpp.6A6D9F9D2F4CF17E.idx  ast.h.33919CCDDBBD56F9.idx  ast_node.cpp.F759703A5C2EEA27.idx  ast_node.h.8E80C33B112FDB03.idx  build_llvm_ir.cpp.2CE565B727ECA75F.idx  build_llvm_ir.h.FAB331512665EF8C.idx  declataror.cpp.5B6D4A71A41605B2.idx  declataror.h.8217D335388AE9EA.idx  fstream_guard.cpp.6D0870778DEA6AF5.idx  fstream_guard.h.7C9BEBB1FD75F64C.idx  global_var.cpp.AB4E714044FDD315.idx  global_var.h.0843369027E644E7.idx  inner.h.ECD7E32F334E978C.idx  judge_char.cpp.822FFB7223F74823.idx  judge_char.h.5E7EE54A1315AE77.idx  life.cpp.7740E0E68754B1EE.idx  life.h.C447F798F617F018.idx  main.cpp.73A2C3E191DE7B02.idx  parser.cpp.C2BD8A950C1B26C6.idx  parser.h.DD93AADC2C139467.idx  scanning.cpp.ED6F5EB71FA0503B.idx  scanning.h.B0CC99EB0E7BDF8A.idx  spec_tree.cpp.84467C3E992F1321.idx  spec_tree.h.DFF702D9D7D05DCC.idx  spec_tree_node.cpp.07E9F76108C89EB9.idx  spec_tree_node.h.5CCAF8FF00F4C698.idx  symbol_table.cpp.5555753C4058F11D.idx  symbol_table.h.8E1AEE74871A43B9.idx  token.cpp.97E73AD1ABC1B50B.idx  token.h.6A1E245F95C5A2A5.idx  value.cpp.EF58F5CC2012B4E5.idx
code/: CMakeLists.txt  TreeMap.html  asm_code.cpp  asm_file.cpp  build_llvm_ir.cpp  header.h  life.cpp  main  main.cpp  parser.cpp  parser.h  scanning.cpp  sign_map.cpp  symbol_list.cpp  symbol_table.cpp  synctax_tree.cpp  value.cpp  worng.cpp
code/AST/: ast.h  judge_char.h  token.h
code/ast/: CMakeLists.txt  ast.h  judge_char.h  token.h
code/class/: CMakeLists.txt
code/class/implement/: CMakeLists.txt  asm_code.cpp  build_llvm_ir.cpp  fstream_guard.cpp  life.cpp  parser.cpp  scanning.cpp  symbol_table.cpp  synctax_tree.cpp  syntax_tree.cpp  value.cpp  worng.cpp
code/class/interface/: CMakeLists.txt  asm_code.h  build_llvm_ir.h  fstream_guard.h  life.h  parser.h  scanning.h  symbol_table.h  synctax_tree.h  syntax_tree.h  trans_tree.h
code/error/: CMakeLists.txt  inner.cpp
code/header/AST/: ast.h  declararor.h  declataror.h  judge_char.h  token.h
code/header/class/: TreeMap.html  asm_code.h  asm_file.h  build_llvm_ir.h  life.h  parser.h  scanning.h  sign_map.h  symbol_list.h  symbol_table.h  synctax_tree.h
include/ast/: ast.h  ast_node.h  spec_tree_node.h  token.h
include/error/: inner.h  worng.h
include/file/: json_str.h
include/interface/: asm_code.h  build_llvm_ir.h  fstream_guard.h  parser.h  scanning.h  spec_tree.h  symbol_table.h  syntax_tree.h
include/spt/: spec_symbol_table.h  spec_tree.h  spec_tree_node.h
include/token/: declataror.h  judge_char.h  token.h
include/var/: global_var.h  spec_tree_node_type.h
src/: main.cpp
src/ast/: CMakeLists.txt  ast.cpp  ast_node.cpp  judge_char.cpp
src/ast/include/ast/: AstNode.h  AstNodeBasic.h  AstNodeExpression.h  AstNodeStatement.h  Operator.h
src/ast/src/: AstNode.cpp  AstNodeBasic.cpp  AstNodeExpression.cpp  AstNodeStatement.cpp
src/ast/src/def_decl/: AstNodeDefDecl.cpp  (+1 more)
src/controller/: CMakeLists.txt
src/controller/src/: mode.cpp  mode_input.cpp
src/file/: json_str.cpp
src/implement/: asm_code.cpp  build_llvm_ir.cpp  fstream_guard.cpp  life.cpp  parser.cpp  scanning.cpp  spec_tree.cpp  symbol_table.cpp  syntax_tree.cpp  value.cpp
src/parser/: CMakeLists.txt
src/parser/src/: Parser.cpp  ParserImpl.cpp  error.cpp
src/scan/: CMakeLists.txt
src/scan/src/: Scanner.cpp  ScannerInputFile.cpp  judge_char.cpp
src/spt/: spec_symbol_table.cpp  spec_tree.cpp  spec_tree_node.cpp
src/token/: CMakeLists.txt  declataror.cpp  judge_char.cpp  token.cpp
src/token/src/: TokenType.cpp
src/var/: global_var.cpp  spec_tree_node_type.cpp
test/: .f1.dot  1  2  TreeMap.html  c.c  c.ll  demo.html  i1  i2  llvm  llvm.ll  o1  output_test  test  tree.json  tree1.json
test/ast/: 10_if.puml  11_for.puml  12_do_while.puml  13_while.puml  14_switch.puml  15_enum.puml  16_expr+array.puml  17_func_call.puml  2_func_dec.puml  3_var_def.puml  4_array_def.puml  6_expr_var.puml  7_expr_add_postifx_op.puml
test/c_files/: 10_if.c  12_do_while.c  13_while.c  16_expr+array.c  17_func_call.c  3_var_def.c
test/c_files_for_input/: 10_if.c  11_for.c  12_do_while.c  14_switch.c  4_array_def.c  5_struct.c  6_expr_var.c  7_expr_add_postifx_op.c
test/clang-output-llvm/: 1.c  1.ll  run.zsh
test/debug/: 1  1.c
test/eg/: run.sh
test/json_tree_output/: 10_if.json  10_if.pu  11_for.json  11_for.pu  12_do_while.json  12_do_while.pu  13_while.json  13_while.pu  14_switch.json  14_switch.pu  16_expr+array.pu  2_func_dec.json  2_func_dec.pu  3_var_def.json  3_var_def.pu  4_array_def.json  4_array_def.pu  5_struct.json  5_struct.pu  6_expr_var.json  6_expr_var.pu  7_expr_add_postifx_op.json  7_expr_add_postifx_op.pu  8_expr_add_primary_op.pu
test/llvm_output/: 10_if.ll  11_for.ll  12_do_while.ll  13_while.ll  14_switch.ll  16_expr+array.ll  2_func_dec.ll  3_var_def.ll  4_array_def.ll  5_struct.ll  7_expr_add_postifx_op.ll  9_expr_except_enum.ll
test/old_useless/: c.c  c.ll  i1  llvm.ll  run_test.sh
test/other_test_files/: assign.c  bitop.c  initializer.c  macro.c
test/scanner/: 10_if.txt  11_for.txt  12_do_while.txt  13_while.txt  14_switch.txt  16_expr+array.txt  17_func_call.txt  1_func_def_vacant.txt  2_func_dec.txt  3_var_def.txt  4_array_def.txt  5_struct.txt  6_expr_var.txt  7_expr_add_postifx_op.txt
test/spec_tree_output/: 10_if.pu  11_for.pu  12_do_while.pu  13_while.pu  16_expr+array.pu  1_func_def_vacant.pu  2_func_dec.pu  3_var_def.pu  4_array_def.pu  6_expr_var.pu  7_expr_add_postifx_op.pu
test/token_output/: 10_if.txt  11_for.txt  12_do_while.txt  13_while.txt  14_switch.txt  16_expr+array.txt  2_func_dec.txt  3_var_def.txt  4_array_def.txt  5_struct.txt  6_expr_var.txt  7_expr_add_postifx_op.txt
(+16 files in other folders)
