file(GLOB_RECURSE src CONGIGURE_DEPENDS *.cpp *.h)
add_library(implement STATIC ${src})
target_include_directories(implement PUBLIC ./../../ast)
target_include_directories(implement PUBLIC ./../../error)
target_include_directories(implement PUBLIC ./../interface)
#find_package(interface)
#target_link_libraries(implement interface)
#find_package(ast)
#target_link_libraries(implement ast)
find_package(fmt CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt ${llvm_libs})