file(GLOB_RECURSE src CONGIGURE_DEPENDS *.cpp *.h)
add_library(interface STATIC ${src})
set_target_properties(interface PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(interface PUBLIC ./../implement)
link_directories(./../implement)
target_include_directories(interface PUBLIC ./../../ast)
link_directories(./../../ast)
target_include_directories(interface PUBLIC ./../../error)
link_directories(./../../error)
message(STATUS "found ast in class interface")
find_package(ast)
link_libraries(interface ast)